frontend/test/should_fail/array_avg.grg
function avg(ref a:array<string>) : double
{
	return(a.avg());
}